<resources>
    <string name="app_name">OPSC7312</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="start_navigating">Start Navigating</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="the_liquor_stash">The Liquor Stash</string>
    <string name="register">Register</string>
    <string name="emailRegister">Email</string>
    <string name="passwordRegister">Password</string>
    <string name="sign_up_register">SIGN UP</string>
    <string name="share_now">Share now</string>
    <string name="places_name">Places Name</string>
    <string name="address">Address</string>
    <string name="not_sure">Not sure</string>
    <string name="application_name">application name</string>
    <string name="directions">Directions</string>
    <string name="information">Information</string>
    <string name="api_key">AIzaSyANNxd0f6zOf_VvWwI-B3bY0rOblhUW410</string>
    <string name="distance">Distance</string>
    <string name="time_of_arrival">Time of Arrival</string>
    <string name="floating_action_button">Floating action button</string>
    <string name="km">KM</string>
    <string name="measurement">Measurement</string>

    <string name="MAPS_API_KEY">AIzaSyANNxd0f6zOf_VvWwI-B3bY0rOblhUW410</string>
</resources>