<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/NewBackground"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="90dp"

        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/landmarkgo" />



    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="serif-monospace"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/emailRegister"
        app:helperText="Required*"
        android:layout_marginStart="32dp"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:startIconTint="@color/white"
        app:endIconTint="@color/white"
        app:layout_constraintVertical_bias="1.0"
        android:maxLines="1"
        app:helperTextTextColor="@color/red"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Email"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordRegister"
        app:helperText="Required*"
        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        app:startIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconTint="@color/white"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
        app:layout_constraintVertical_bias="1.0"
        android:maxLines="1"
        app:helperTextTextColor="@color/red"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password1"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FF000000"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        android:layout_marginRight="4pt"
        android:layout_marginLeft="4pt"
        android:layout_marginTop="10pt"
        android:text="@string/sign_up_register"/>




</androidx.constraintlayout.widget.ConstraintLayout>