<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/NewBackground"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/landmarkgo" />

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:helperText="Required*"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/white"
        app:boxStrokeErrorColor="@color/red"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:maxLines="1"
        app:startIconTint="@color/white"
        app:endIconTint="@color/white"
        app:hintTextColor="@color/white"
        app:helperTextTextColor="@color/red"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:maxLines="1"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:helperText="Required*"
        android:layout_marginStart="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="32dp"

        app:hintTextColor="@color/white"
        app:boxStrokeColor="@color/white"
        android:textColorHint="@color/white"
        app:startIconTint="@color/white"
        app:helperTextTextColor="@color/red"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textColor="#FF000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/log_in"
        android:textColor="#FF000000"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>